+ Fix RTL dropdown alignment

--- a/public_html/includes/templates/default.admin/less/framework/dropdown.less
+++ b/public_html/includes/templates/default.admin/less/framework/dropdown.less
@@ -32,7 +32,7 @@
     margin: 0;
     padding: 0;
     list-style: none;
-    text-align: left;
+    text-align: start;
     background-color: #fff;
     border: 1px solid var(--default-border-color);
     border-radius: var(--border-radius);
