--- a/public_html/includes/templates/default.catalog/css/framework.css
+++ b/public_html/includes/templates/default.catalog/css/framework.css
@@ -746,7 +746,7 @@ ul.breadcrumb li a {
   margin: 0;
   padding: 0;
   list-style: none;
-  text-align: left;
+  text-align: start;
   background-color: var(--dropdown-menu-background-color);
   border: 1px solid var(--default-border-color);
   border-radius: var(--border-radius);
@@ -827,8 +827,12 @@ ul.breadcrumb li a {
 html[dir="rtl"] .dropdown [data-toggle="dropdown"] {
   background-position: left 1em center;
 }
+html[dir="rtl"] .dropdown-menu {
+  left: auto !important;
+  right: 0 !important;
+}
 @media (min-width: 768px) {
-  html[dir="rtl"] .dropdown-menu-end {
+  html[dir="rtl"] .dropdown-menu.dropdown-menu-end {
     left: 0 !important;
     right: auto !important;
   }
